feat(departamentos): permitir actualizar presentacion informativa
